<resources>
    <string name="app_name">Grandma Beauty Secrets</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Eyes">Eyes</string>
    <string name="Face">Face</string>
    <string name="Hair">Hair</string>
    <string name="Arms_Legs">Arms &amp; Feet</string>
    <string name="Skin">Skin</string>
    <string name ="Tip">Tip %s/%s</string>

    <!--Eyes-->
    <string-array name="EyesIssues">
        <item name="Dark_Circles">Dark Circles</item>
        <item name="Sunken_Eyes">Sunken Eyes</item>
        <item name="Puffiness">Puffiness</item>
        <item name="Beautiful_Eyes">Beautiful Eyes</item>
        <item name="Eyebrows">Eyebrows To Grow</item>
    </string-array>


    <!--Face-->
    <string-array name="Face">
        <item name="Fair_Skin">Fair Skin</item>
        <item name="Dark_Lips_Lightening">Dark Lips Lightening</item>
        <item name="Blackheads_Removal">Blackheads Removal</item>
        <item name="Face_Cleanser">Face Cleanser</item>
        <item name="Blemishes_Correction">Blemishes reduction</item>
        <item name="Face_Scrubber">Face Scrubber</item>
        <item name="Acne_Treatment">Acne Correction</item>
        <item name="Teeth_Whitening">Teeth Whitening</item>
    </string-array>

    <!--Hair-->
    <string-array name="Hair">
        <item name="Split_Ends">Split Ends</item>
        <item name="Dandruff_Treatment">Dandruff Treatment</item>
        <item name="Grey_Hair">Grey Hair</item>
        <item name="Natural_Hair_Conditioner">Natural Hair Conditioner</item>
        <item name="Hair_Loss_Treatment">Hair Loss Treatment</item>
        <item name="Head_Lice_Treatment">Head Lice Treatment</item>
    </string-array>

    <!--Arms & feet-->
    <string-array name="ArmsFeet">
        <item name="Dark_Inner_Thigh">Dark Inner Thigh</item>
        <item name="Dark_Underarms">Dark Underarms</item>
        <item name="Dry_Rough_Hands">Dry &amp; Rough Hands</item>
        <item name="Fair_Hands_Feet">Fair Hands &amp; Feet</item>
        <item name="Hands_Feet_Tan_Removal">Tanning Removal Of Hands &amp; Feet</item>
        <item name="Nail_Growth">Nail Growth</item>
        <item name="Shiny_Nails">Shiny Nails</item>
    </string-array>


    <!--Skin-->
    <string-array name="Skin">
        <item name="Prickly_Heat">Prickly Heat</item>
        <item name="Stretch_Marks">Stretch Marks</item>
        <item name="Warts">Warts</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
